# pj

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: release.yml
src/: config.rs  frecency.rs  github.rs  main.rs  multiplexer.rs  projects.rs  shell.rs  tui.rs
src/commands/: add.rs  init.rs  list.rs  mod.rs  rm.rs  select.rs  show_config.rs  tag.rs
