[package]
name = "pj"
version = "0.1.0"
edition = "2021"
description = "Project Launcher CLI tool with fuzzy matching"

[dependencies]
clap = { version = "4", features = ["derive"] }
skim = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
tabled = "0.17"
dialoguer = { version = "0.11", features = ["completion"] }
anyhow = "1"
