[package]
name = "pj-cli"
version = "0.1.1"
edition = "2021"
authors = ["Alberto Cebada Aleu <contact@albertocebada.com>"]
description = "Project launcher CLI with fuzzy matching"
readme = "README.md"
homepage = "https://github.com/alceal/pj"
repository = "https://github.com/alceal/pj"
license = "MIT"
keywords = ["cli", "project", "launcher", "fuzzy", "productivity"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "pj"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
skim = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
tabled = "0.17"
dialoguer = { version = "0.11", features = ["completion"] }
anyhow = "1"
